lab05-kubernetes/k8s/base/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels: { app.kubernetes.io/name: postgres }
spec:
  clusterIP: None              # headless service cho StatefulSet
  selector: { app.kubernetes.io/name: postgres }
  ports:
    - { name: pg, port: 5432 }
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels: { app.kubernetes.io/name: postgres }
  template:
    metadata:
      labels: { app.kubernetes.io/name: postgres }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 70           # user "postgres" trong image alpine
        runAsGroup: 70
        fsGroup: 70
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - { name: pg, containerPort: 5432 }
          readinessProbe:
            exec: { command: ["sh", "-c", "pg_isready -U \"$POSTGRES_USER\" -d shop"] }
            periodSeconds: 5
          livenessProbe:
            exec: { command: ["sh", "-c", "pg_isready -U \"$POSTGRES_USER\" -d shop"] }
            periodSeconds: 15
            failureThreshold: 4
          resources:
            requests: { cpu: 100m, memory: 256Mi }
            limits: { cpu: "1", memory: 512Mi }
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
          volumeMounts:
            - { name: data, mountPath: /var/lib/postgresql/data }
            - { name: run, mountPath: /var/run/postgresql }
      volumes:
        - name: run
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ReadWriteOnce]
        resources:
          requests: { storage: 1Gi }
