lab05-kubernetes/k8s/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels: { app.kubernetes.io/name: redis }
  template:
    metadata:
      labels: { app.kubernetes.io/name: redis }
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999          # user "redis" trong image alpine
        runAsGroup: 1000
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: redis
          image: redis:7-alpine
          args: ["--maxmemory", "64mb", "--maxmemory-policy", "allkeys-lru", "--save", ""]
          ports:
            - { name: redis, containerPort: 6379 }
          readinessProbe:
            exec: { command: ["redis-cli", "ping"] }
            periodSeconds: 5
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { cpu: 200m, memory: 128Mi }
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
          volumeMounts:
            - { name: data, mountPath: /data }
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector: { app.kubernetes.io/name: redis }
  ports:
    - { name: redis, port: 6379 }
